<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/nha_hang"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_food"
        android:enabled="true"
        android:icon="@drawable/food"
        android:title="@string/mon_an"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_sale"
        android:enabled="true"
        android:icon="@drawable/sale"
        android:title="@string/khuyen_mai"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_history"
        android:enabled="true"
        android:icon="@drawable/history"
        android:title="@string/lich_su"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_user"
        android:enabled="true"
        android:icon="@drawable/user"
        android:title="@string/ca_nhan"
        app:showAsAction="always" />
</menu>